[gd_scene load_steps=20 format=2]

[ext_resource path="res://bubblegum_uniform_collision.tres" type="TileSet" id=1]
[ext_resource path="res://Paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://HolderTop.tscn" type="PackedScene" id=3]
[ext_resource path="res://KillBound.gd" type="Script" id=4]
[ext_resource path="res://PlayerAnimator.gd" type="Script" id=5]
[ext_resource path="res://HolderBottom.tscn" type="PackedScene" id=6]
[ext_resource path="res://chain_shader.shader" type="Shader" id=7]
[ext_resource path="res://tex/Chain.png" type="Texture" id=8]
[ext_resource path="res://tex/Saver.png" type="Texture" id=9]
[ext_resource path="res://sfx/ballsaver.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 23 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 160 )

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 161 )

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 7 )
shader_param/v_offset = 1.397

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform float v_offset; 

void fragment() {
	COLOR = texture(TEXTURE, vec2(UV.x, UV.y - v_offset));
	
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/v_offset = 2.234

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Bounds/BallSaver/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bounds/BallSaver/Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 16, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Bounds/BallSaver/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bounds/BallSaver/Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 16, 0 ), Rect2( 0, 0, 16, 360 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bounds/BallSaver/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -320 ), Vector2( 0, 16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="world" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
visible = false
z_index = -11
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 14, 0, 1, 14, 0, 2, 14, 0, 3, 14, 0, 4, 14, 0, 5, 14, 0, 6, 14, 0, 7, 14, 0, 8, 14, 0, 9, 14, 0, 10, 14, 0, 11, 14, 0, 12, 14, 0, 13, 14, 0, 14, 14, 0, 15, 14, 0, 16, 14, 0, 17, 14, 0, 18, 14, 0, 19, 14, 0, 20, 14, 0, 21, 14, 0, 22, 14, 0, 23, 14, 0, 24, 14, 0, 25, 14, 0, 26, 14, 0, 27, 14, 0, 28, 14, 0, 29, 14, 0, 30, 14, 0, 31, 14, 0, 32, 14, 0, 33, 14, 0, 34, 14, 0, 35, 14, 0, 36, 14, 0, 37, 14, 0, 38, 14, 0, 39, 14, 0, 65536, 14, 0, 65575, 14, 0, 131072, 14, 0, 131111, 14, 0, 196608, 14, 0, 196647, 14, 0, 262144, 14, 0, 262183, 14, 0, 327680, 14, 0, 327719, 14, 0, 393216, 14, 0, 393255, 14, 0, 458752, 14, 0, 458791, 14, 0, 524288, 14, 0, 524327, 14, 0, 589824, 14, 0, 589863, 14, 0, 655360, 14, 0, 655399, 14, 0, 720896, 14, 0, 720935, 14, 0, 786432, 14, 0, 786471, 14, 0, 851968, 14, 0, 852007, 14, 0, 917504, 14, 0, 917543, 14, 0, 983040, 14, 0, 983079, 14, 0, 1048576, 14, 0, 1048615, 14, 0, 1114112, 14, 0, 1114151, 14, 0, 1179648, 14, 0, 1179687, 14, 0, 1245184, 14, 0, 1245223, 14, 0, 1310720, 14, 0, 1310759, 14, 0, 1376256, 14, 0, 1376257, 14, 0, 1376258, 14, 0, 1376259, 14, 0, 1376260, 14, 0, 1376261, 14, 0, 1376262, 14, 0, 1376263, 14, 0, 1376264, 14, 0, 1376265, 14, 0, 1376266, 14, 0, 1376267, 14, 0, 1376268, 14, 0, 1376269, 14, 0, 1376270, 14, 0, 1376271, 14, 0, 1376272, 14, 0, 1376273, 14, 0, 1376274, 14, 0, 1376275, 14, 0, 1376276, 14, 0, 1376277, 14, 0, 1376278, 14, 0, 1376279, 14, 0, 1376280, 14, 0, 1376281, 14, 0, 1376282, 14, 0, 1376283, 14, 0, 1376284, 14, 0, 1376285, 14, 0, 1376286, 14, 0, 1376287, 14, 0, 1376288, 14, 0, 1376289, 14, 0, 1376290, 14, 0, 1376291, 14, 0, 1376292, 14, 0, 1376293, 14, 0, 1376294, 14, 0, 1376295, 14, 0 )

[node name="Paddle" parent="." instance=ExtResource( 2 )]
position = Vector2( 70, 49 )

[node name="HolderTop" parent="." instance=ExtResource( 3 )]

[node name="HolderBottom" parent="." instance=ExtResource( 6 )]
position = Vector2( 57, 347 )

[node name="Bounds" type="Node2D" parent="."]

[node name="Top" type="KinematicBody2D" parent="Bounds"]
position = Vector2( 320, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Top"]
shape = SubResource( 1 )

[node name="Bottom" type="KinematicBody2D" parent="Bounds"]
position = Vector2( 320, 351 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Bottom"]
shape = SubResource( 1 )

[node name="BallSaver" type="KinematicBody2D" parent="Bounds"]
position = Vector2( 26, 161 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/BallSaver"]
position = Vector2( 0, -320 )
shape = SubResource( 2 )
disabled = true

[node name="Sprite" type="Sprite" parent="Bounds/BallSaver"]
material = SubResource( 3 )
position = Vector2( -7, -160 )
z_index = -1000
texture = ExtResource( 9 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 16, 0 )

[node name="WaveBorder" type="KinematicBody2D" parent="Bounds"]
position = Vector2( 8, 160 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/WaveBorder"]
position = Vector2( 624, 16 )
shape = SubResource( 2 )

[node name="KillBound" type="Area2D" parent="Bounds"]
position = Vector2( 51, 168 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/KillBound"]
modulate = Color( 0.847059, 0.0941176, 0.0941176, 1 )
position = Vector2( -46, 9 )
shape = SubResource( 4 )

[node name="Chain" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( 67, 12 )
scale = Vector2( 1, 0.8125 )
z_index = -1
texture = ExtResource( 8 )
centered = false
hframes = 6
region_enabled = true
region_rect = Rect2( 0, 0, 42, 413.874 )

[node name="Chain2" type="Sprite" parent="."]
material = SubResource( 7 )
position = Vector2( 39, 12 )
scale = Vector2( 1, 0.8125 )
z_index = -1
texture = ExtResource( 8 )
centered = false
hframes = 6
region_enabled = true
region_rect = Rect2( 0, 0, 42, 417.872 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "DisableBallSaver"
anims/DisableBallSaver = SubResource( 8 )
anims/EnableBallSaver = SubResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="body_entered" from="Bounds/KillBound" to="Bounds/KillBound" method="_on_KillBound_body_entered"]
